# asteroid-btsyncd

./: CMakeLists.txt
doc/: 01_intro.md  02_impl.md  CMakeLists.txt
src/: ANCSService.cpp  ANCSService.h  BatteryService.cpp  BatteryService.h  BluetoothService.cpp  BluetoothService.h  CMakeLists.txt  Device.cpp  Device.h  HeartRateService.cpp  HeartRateService.h  MediaService.cpp  MediaService.h  NotificationService.cpp  NotificationService.h  Remote.cpp  Remote.h  RemoteService.cpp  RemoteService.h  ScreenshotService.cpp  ScreenshotService.h  TimeService.cpp  TimeService.h  WeatherService.cpp  WeatherService.h  ancs.h  asteroid-btsyncd.h.in  heartrate.cpp  heartrate.h  main.cpp
